--- a/dl.cfg
+++ b/dl.cfg
@@ -1,3 +1,3 @@
 [AWS]
-AWS_ACCESS_KEY_ID=AKIARY7ISD4QNCPPJ36Q
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
